--- a/style.css
+++ b/style.css
@@ -1,38 +1,41 @@
-.bd {
-    border: 1px solid black;
-    height: 80px;
-    width: 80px;
-    float: left;
+#mainDive {
+    margin: 71px;
 }
-.mainDiv {
-    width: 252px;
-    height: 252px;
+.asd {
+    border: 1px solid black; !important;
+    width: 60px; !important;
+    height: 60px; !important;
+}
+body {
+    padding: 0; !important;
+}
+button, input, optgroup, select, textarea {
+    color:black;
+    font: initial;
+    text-align: center;
+    margin: 0;
+
+}
+.ui.input input {
+    padding: 0; !important;
+}
+.column {
+    padding: 0;!important;
+}
+.ui.grid>.column:not(.row)  {
+    padding-top: 0;!important;
+    padding-bottom: 0;!important;
+}
+
+.ui.grid>.column:not(.row), .ui.grid>.row>.column {
     position: relative;
-    margin: 0 auto;
-}
-.ui.horizontal.list>.item {
-    display: block;
-    margin-left: 0;
-    font-size: 1rem;
+    display: inline-block;
+    width: 60px; !important;
+    padding-left: 0; !important;
+    padding-right: 0;!important;
+    vertical-align: top;
     text-align: center;
 }
-.ui.horizontal.list {
-    display: block;
-    font-size: 0;
-    margin: 40px auto;
-}
-.button_Class {
-    margin: 0 auto;
-    display: block;
-
-}
-.but {
-
-    margin: 0 auto;
-    display: block;
-    width: 180px;
-
-}
-p {
-    text-align: center;
+#DrawMatrix {
+    height: 40px; !important;
 }
